--- a/Board/index.html
+++ b/Board/index.html
@@ -37,9 +37,9 @@
 		<canvas id="display"></canvas>
 	</div>
 	<div class="toolkit layer rounded">
-		<input id="vertice-tool" type="radio" name="toolkit" hidden checked>
-		<label for="vertice-tool" class="with-padding flex secondary-centered with-gap">
-			<img src="../Resources/Icons/ScatterPlot.png" alt="Vertice" class="icon">
+		<input id="vertex-tool" type="radio" name="toolkit" hidden checked>
+		<label for="vertex-tool" class="with-padding flex secondary-centered with-gap">
+			<img src="../Resources/Icons/ScatterPlot.png" alt="Vertex" class="icon">
 		</label>
 		<input id="edge-tool" type="radio" name="toolkit" hidden>
 		<label for="edge-tool" class="with-padding flex secondary-centered with-gap">
