--- a/Textbox/index.html
+++ b/Textbox/index.html
@@ -33,11 +33,11 @@
 		</a>
 	</nav>
 	<div class="display flex">
-		<textarea id="input-field" placeholder="Input the structure" class="with-padding large-padding"></textarea>
+		<textarea id="input-field" placeholder="Input the structure" class="with-padding large-padding code"></textarea>
 	</div>
 	<div class="menu layer rounded">
 		<button id="execute-program" class="with-padding highlight-background flex secondary-centered with-gap">
-			<img src="../Resources/Icons/Camera.png" alt="Capture" class="icon">
+			<img src="../Resources/Icons/Play.png" alt="Execute" class="icon">
 		</button>
 	</div>
 	<script src="../Scripts/Templates/Loader.js"></script>
